	* Added support for handling M3U stream URLs.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused GET requests to return 400 in
	'src/glassplayer/serverid.cpp'.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2016-01-29 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
2016-01-29 Fred Gleason <fredg@paravelsystems.com>
	* Implemented '--list-codecs' and '--list-devices' options for
	glassplayer(1) in 'src/glassplayer/glassplayer.cpp' and
	'src/glassplayer/glassplayer.h'.
2016-02-01 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out an HLS connector in 'src/glassplayer/conn_hls.cpp'
	and 'src/glassplayer/conn_hls.h'.
	* Added an 'M3uPlaylist' class in 'src/glassplayer/m3uplaylist.cpp'
	and 'src/glassplayer/m3uplaylist.h'.
2016-02-01 Fred Gleason <fredg@paravelsystems.com>
	* Added code in 'src/glassplayer/conn_hls.cpp' and
	'src/glassplayer/conn_hls.h' to update the index file automatically.
2016-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Implemented audio playout from HLS streams.
2016-02-04 Fred Gleason <fredg@paravelsystems.com>
	* Implemented support for HTTP redirection in
	'src/glassplayer/serverid.cpp' and 'src/glassplayer/serverid.h'.
2016-02-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/conn_xcast.cpp' that caused
	glitching in Shoutcast streams containing live metadata updates.
2016-02-05 Fred Gleason <fredg@paravelsystems.com>
	* Refactored metadata processing so as to emit updates in realtime
	sync with audio playout.
2016-02-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a '--stats-out' option.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the --stats-out parameters for the AAC codec in
	'src/glassplayer/codec_fdk.cpp' and 'src/glassplayer/codec_fdk.h'.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Implemented --stats-out parameters for the Connector classes.