@@ -134,70 +134,70 @@ bool M3uPlaylist::parse(const QByteArray &data,const QUrl &src)
   }
 
   for(int i=0;i<f0.size();i++) {
-    if(f0[i].left(1)=="#") {  // Tag
-      if(f0[i]=="#EXTM3U") {
-	m3u_extended=true;
+    if(!f0[i].trimmed().isEmpty()) {
+      if(f0[i].left(1)=="#") {  // Tag
+	if(f0[i]=="#EXTM3U") {
+	  m3u_extended=true;
+	}
+	if(m3u_extended) {
+	  QStringList f1=f0[i].split(":");
+
+	  if((f1[0]=="#EXT-X-VERSION")&&(f1.size()==2)) {
+	    if(m3u_version!=-1) {
+	      Log(LOG_WARNING,"hls: multiple EXT-X-VERSION tags not allowed");
+	      return false;   // As per Pantos 4.3.1.2
+	    }
+	    m3u_version=f1[1].toInt(&ok);
+	    if(!ok) {
+	      Log(LOG_WARNING,"hls: invalid EXT-X-VERSION tag");
+	      return false;
+	    }
+	  }
+
+	  if((f1[0]=="#EXT-X-TARGETDURATION")&&(f1.size()==2)) {
+	    m3u_target_duration=f1[1].toInt(&ok);
+	    if(!ok) {
+	      Log(LOG_WARNING,"hls: invalid EXT-X-TARGETDURATION tag");
+	      return false;
+	    }
+	  }
+
+	  if((f1[0]=="#EXT-X-MEDIA-SEQUENCE")&&(f1.size()==2)) {
+	    m3u_media_sequence=f1[1].toInt(&ok);
+	    if(!ok) {
+	      Log(LOG_WARNING,"hls: invalid EXT-X-MEDIA-SEQUENCE tag");
+	      return false;
+	    }
+	  }
+
+	  if(f1[0]=="#EXT-X-ENDLIST") {
+	    m3u_ended=true;
+	  }
+
+	  if(f1[0]=="#EXT-X-INDEPENDENT-SEGMENTS") {
+	    m3u_independent=true;
+	  }
+
+	  if((f1[0]=="#EXTINF")&&(f1.size()==2)) {
+	    QStringList f2=f1[1].split(",");
+	    m3u_current_segment_duration=f2[0].toDouble(&ok);
+	    if(!ok) {
+	      Log(LOG_WARNING,"hls: invalid EXTINF tag");
+	      return false;
+	    }
+	    if(f2.size()>1) {
+	      f2.erase(f2.begin());
+	      m3u_current_segment_title=f2.join(",");
+	    }
+	  }
+
+	  if((f1[0]=="#EXT-X-PROGRAM-DATE-TIME")&&(f1.size()>1)) {
+	    f1.erase(f1.begin());
+	    m3u_current_segment_datetime=Connector::xmlTimestamp(f1.join(":"));
+	  }
+	}
       }
-      if(m3u_extended) {
-	QStringList f1=f0[i].split(":");
-
-	if((f1[0]=="#EXT-X-VERSION")&&(f1.size()==2)) {
-	  if(m3u_version!=-1) {
-	    Log(LOG_WARNING,"hls: multiple EXT-X-VERSION tags not allowed");
-	    return false;   // As per Pantos 4.3.1.2
-	  }
-	  m3u_version=f1[1].toInt(&ok);
-	  if(!ok) {
-	    Log(LOG_WARNING,"hls: invalid EXT-X-VERSION tag");
-	    return false;
-	  }
-	}
-
-	if((f1[0]=="#EXT-X-TARGETDURATION")&&(f1.size()==2)) {
-	  m3u_target_duration=f1[1].toInt(&ok);
-	  if(!ok) {
-	    Log(LOG_WARNING,"hls: invalid EXT-X-TARGETDURATION tag");
-	    return false;
-	  }
-	}
-
-	if((f1[0]=="#EXT-X-MEDIA-SEQUENCE")&&(f1.size()==2)) {
-	  m3u_media_sequence=f1[1].toInt(&ok);
-	  if(!ok) {
-	    Log(LOG_WARNING,"hls: invalid EXT-X-MEDIA-SEQUENCE tag");
-	    return false;
-	  }
-	}
-
-	if(f1[0]=="#EXT-X-ENDLIST") {
-	  m3u_ended=true;
-	}
-
-	if(f1[0]=="#EXT-X-INDEPENDENT-SEGMENTS") {
-	  m3u_independent=true;
-	}
-
-	if((f1[0]=="#EXTINF")&&(f1.size()==2)) {
-	  QStringList f2=f1[1].split(",");
-	  m3u_current_segment_duration=f2[0].toDouble(&ok);
-	  if(!ok) {
-	    Log(LOG_WARNING,"hls: invalid EXTINF tag");
-	    return false;
-	  }
-	  if(f2.size()>1) {
-	    f2.erase(f2.begin());
-	    m3u_current_segment_title=f2.join(",");
-	  }
-	}
-
-	if((f1[0]=="#EXT-X-PROGRAM-DATE-TIME")&&(f1.size()>1)) {
-	  f1.erase(f1.begin());
-	  m3u_current_segment_datetime=Connector::xmlTimestamp(f1.join(":"));
-	}
-      }
-    }
-    else {
-      if(!f0[i].isEmpty()) {
+      else {
 	m3u_segment_urls.push_back(QUrl(f0[i]));
 	if(!m3u_segment_urls.back().isValid()) {
 	  Log(LOG_WARNING,"hls: invalid URL");
@@ -222,30 +222,31 @@ QString M3uPlaylist::dump() const
 
   if(m3u_extended) {
     ret+="#EXTM3U\r\n";
-  }
-  ret+=QString().sprintf("#EXT-X-TARGETDURATION:%d\r\n",m3u_target_duration);
-  if(m3u_version>=0) {
-    ret+=QString().sprintf("#EXT-X-VERSION:%d\r\n",m3u_version);
-  }
-  if(m3u_media_sequence>=0) {
-    ret+=QString().sprintf("#EXT-X-MEDIA-SEQUENCE:%d\r\n",m3u_media_sequence);
-  }
-  if(m3u_ended) {
-    ret+="#EXT-X-ENDLIST\r\n" ;
-  }
-  if(m3u_independent) {
-    ret+="#EXT-X-INDEPENDENT-SEGMENTS\r\n";
-  }
-  
-  for(unsigned i=0;i<m3u_segment_titles.size();i++) {
-    if(m3u_segment_datetimes[i].isValid()) {
-      ret+="#EXT-X-PROGRAM-DATE-TIME:"+
-	m3u_segment_datetimes[i].toString("yyyy-MM-dd")+"T"+
-	m3u_segment_datetimes[i].toString("hh:mm:ss:zzz")+
-	Connector::timezoneOffsetString()+"\r\n";
+    ret+=QString().sprintf("#EXT-X-TARGETDURATION:%d\r\n",m3u_target_duration);
+    if(m3u_version>=0) {
+      ret+=QString().sprintf("#EXT-X-VERSION:%d\r\n",m3u_version);
     }
-    ret+=QString().sprintf("#EXTINF:%7.5lf,",m3u_segment_durations[i])+
-      m3u_segment_titles[i]+"\r\n";
+    if(m3u_media_sequence>=0) {
+      ret+=QString().sprintf("#EXT-X-MEDIA-SEQUENCE:%d\r\n",m3u_media_sequence);
+    }
+    if(m3u_ended) {
+      ret+="#EXT-X-ENDLIST\r\n" ;
+    }
+    if(m3u_independent) {
+      ret+="#EXT-X-INDEPENDENT-SEGMENTS\r\n";
+    }
+  }
+  for(unsigned i=0;i<m3u_segment_titles.size();i++) {
+    if(m3u_extended) {
+      if(m3u_segment_datetimes[i].isValid()) {
+	ret+="#EXT-X-PROGRAM-DATE-TIME:"+
+	  m3u_segment_datetimes[i].toString("yyyy-MM-dd")+"T"+
+	  m3u_segment_datetimes[i].toString("hh:mm:ss:zzz")+
+	  Connector::timezoneOffsetString()+"\r\n";
+      }
+      ret+=QString().sprintf("#EXTINF:%7.5lf,",m3u_segment_durations[i])+
+	m3u_segment_titles[i]+"\r\n";
+    }
     ret+=m3u_segment_urls[i].toString()+"\r\n";
   }
 
